--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/AFC2134/zookeeper/issues"
   },
-  "homepage": "https://github.com/AFC2134/zookeeper#readme"
+  "homepage": "https://github.com/AFC2134/zookeeper#readme",
+  "dependencies": {
+    "jest": "^27.3.1"
+  }
 }
